--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
   "dependencies": {
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
-    "react-scripts": "1.1.4"
+    "react-emoji-render": "^0.4.5",
+    "react-scripts": "1.1.4",
+    "smart-outline": "0.0.5",
+    "styled-components": "^3.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
