Mosly style updates
- card & button styling
- move Timer model over to core folder
- add material icons

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "homepage": "http://gregalexsmith.github.io/pomodoro-timer",
   "dependencies": {
+    "mdi-react": "^4.0.0",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
     "react-emoji-render": "^0.4.5",
