--- a/package.json
+++ b/package.json
@@ -1,27 +1,28 @@
 {
-  "name": "pomodoro-timer",
-  "version": "0.1.0",
+  "name": "temp",
   "private": true,
-  "homepage": "https://gregalexsmith.github.io/pomodoro-timer",
-  "dependencies": {
-    "gsap": "^2.0.1",
-    "mdi-react": "^4.0.0",
-    "react": "^16.4.2",
-    "react-dom": "^16.4.2",
-    "react-emoji-render": "^0.4.5",
-    "react-scripts": "1.1.4",
-    "smart-outline": "0.0.5",
-    "styled-components": "^3.4.1"
-  },
+  "version": "0.0.0",
+  "type": "module",
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "preview": "vite preview"
+  },
+  "dependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "gh-pages": "^1.2.0"
+    "@types/react": "^18.0.37",
+    "@types/react-dom": "^18.0.11",
+    "@typescript-eslint/eslint-plugin": "^5.59.0",
+    "@typescript-eslint/parser": "^5.59.0",
+    "@vitejs/plugin-react": "^4.0.0",
+    "eslint": "^8.38.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.3.4",
+    "typescript": "^5.0.2",
+    "vite": "^4.3.9"
   }
 }
