--- a/package.json
+++ b/package.json
@@ -7,23 +7,32 @@
     "dev": "vite",
     "build": "tsc && vite build ",
     "types": "tsc --noEmit",
-    "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "lint:fix": "eslint src --fix",
-    "preview": "vite preview"
+    "lint": "eslint src --fix",
+    "preview": "vite preview",
+    "bundle": "npx vite-bundle-visualizer"
   },
   "dependencies": {
     "@mdi/js": "^7.2.96",
     "@mdi/react": "^1.6.1",
+    "@radix-ui/react-dropdown-menu": "^2.0.5",
+    "class-variance-authority": "^0.6.1",
+    "clsx": "^1.2.1",
     "gsap": "^3.12.1",
+    "howler": "^2.2.3",
+    "lucide-react": "^0.256.0",
     "mdi-react": "^9.2.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-emoji-render": "^2.0.1",
-    "styled-components": "^5.3.11"
+    "styled-components": "^5.3.11",
+    "tailwind-merge": "^1.13.2",
+    "tailwindcss-animate": "^1.0.6",
+    "zustand": "^4.3.8"
   },
   "devDependencies": {
     "@gregalexsmith/eslint-config": "^1.0.2",
+    "@types/howler": "^2.2.7",
     "@types/react": "^18.0.37",
     "@types/react-dom": "^18.0.11",
     "@types/styled-components": "^5.1.26",
